--- a/index.html
+++ b/index.html
@@ -13,40 +13,47 @@
 </head>
 <body>
 
-<h1>My Resume:</h1>
+<h1 class="R"> Resume:</h1>
 
-<h2>Objective:</h2>
+<img class="faiza"
+ src="./WhatsApp Image 2023-09-28 at 10.43.15.jpg" alt="">
 
-<p>Highly motivated girl who is capable of time management.Also a dedicated student eager to learn Ai and Chatboat.Looking for a  challenging position in a instiute  where i can utillize all of my skills.lets talk about my education.I have done matric in science from Allied school.I'am doing my Fsc in pre Medical from  city  district government college.I'am also learning course of Ai and chatboat from the best instiute.And my future goal is to become a doctor. </p>
 
-<h2>Bio Data:</h2>
-<li>Name:Faiza Shah</li>
-<li>Religion:Islam</li>
-<li>Nationality:Pakistani</li>
-<li>Age:18</li>
-<li>contact:03193127429</li>
-<li>Address:Warsak road peshwar</li>
 
-</ul>
 
-<h2>Education:</h2>
+<h2 class="O">Objective:</h2>
+
+<p class="P">Highly motivated girl who is capable of time management.Also a dedicated student eager to learn Ai and Chatboat.Looking for a  challenging position in a instiute  where i can utillize all of my skills.lets talk about my education.I have done matric in science from Allied school.I'am doing my Fsc in pre Medical from  city  district government college.I'am also learning course of Ai and chatboat from the best instiute.And my future goal is to become a doctor. </p>
+<ul>
+  <h2 class="B">Bio Data:</h2>
+  <li class="L">Name:Faiza Shah</li>
+  <li class="L">Religion:Islam</li>
+  <li class="L">Nationality:Pakistani</li>
+  <li class="L">Age:18</li>
+  <li class="L">contact:03193127429</li>
+  <li class="L">Address:Warsak road peshwar</li>
+  
+  </ul>
+
+<h2 class="E">Education:</h2>
 
 <table border="4px">
     <thead>
       <tr>
-    <th>Name of Degree</th>
-    <th>Name of Institute</th>
-    <th>Grade</th>    
-    <th>Year</th>      
+    <th class="T">Name of Degree</th>
+    <th class="T">Name of Institute</th>
+    <th class="T">Grade</th>    
+    <th class="T">Year</th>      
     </tr>
     </thead>
     <tbody>
   <tr> 
-     <td>SSC</td>   
-     <td>Allied School</td>   
-      <td>A</td>    
-      <td>2022</td>     
+     <td class="d">SSC</td>   
+     <td class="d">Allied School</td>   
+      <td class="d">A</td>    
+      <td class="d">2022</td>     
 </tr>
+</table>
 
 </body>
 </html>
